# Ponderada_Hermano_ASCII

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
entregaveis/: README.md  metricas_pipeline.csv  relatorio.md
experiment/: profile.json
scripts/: collect_metrics.py  generate_charts.py  write_run_metadata.py
src/ascii_art/: __init__.py  __main__.py  cli.py  font.py  renderer.py
tests/: test_cli.py  test_experiment_profile.py  test_renderer.py
