[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-art-ci"
version = "0.1.0"
description = "CLI simples para renderizar texto como ASCII art e medir um pipeline CI/CD."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "pytest>=8.2",
  "requests>=2.32",
  "ruff>=0.6",
]

[project.scripts]
ascii-art = "ascii_art.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
